--- a/index.html
+++ b/index.html
@@ -294,6 +294,10 @@ Have fun!!</p>
       <span><a href="https://www.facebook.com/lagonatisapp/"><i class="social-icon fab fa-facebook-f"></i></a></span>
       <span><a href="mailto:lagonatis@gmail.com"><i class="social-icon fas fa-envelope"></i></a></span>
       <p class="copy">© Copyright 2019 Lagonatis</p>
+
+       <a href='https://www.free-counters.org/'></a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=8fa08bff7fba251bb68b4b2efca4786f945ae24b'></script>
+<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/544476/t/0"></script>
+      
     </div>
   </footer>
 
