--- a/index.html
+++ b/index.html
@@ -50,10 +50,13 @@
 
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link boja_linka" href="#footer">Contact</a>
+              <a class="nav-link boja_linka" href="#footer">Kontakt</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link boja_linka" href="#pricing">Pricing</a>
+              <a class="nav-link boja_linka" href="#pricing">Cjenik</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link boja_linka" href="#testimonials">Igre za mobitel</a>
             </li>
             <li class="nav-item">
               <a class="nav-link boja_linka" href="#cta">Download</a>
