--- a/index.html
+++ b/index.html
@@ -193,13 +193,18 @@ Have fun!!</p>
       <div class="carousel-inner">
         <div class="carousel-item active container-fluid">
           <h2 class="testimonial-text">Very nice</h2>
-          <img class="testimonial-image" src="images/komentari1.png" alt="dog-profile">
+          <img class="testimonial-image" src="images/komentari1.PNG" alt="dog-profile">
           <em>Snjezana OSTI; April 17, 2018.</em>
         </div>
         <div class="carousel-item container-fluid">
           <h2 class="testimonial-text">Zanimljivo i poučno</h2>
-          <img class="testimonial-image" src="images/komentari2.png" alt="lady-profile">
+          <img class="testimonial-image" src="images/komentari2.PNG" alt="lady-profile">
           <em>Sunčica L; August 3, 2017.</em>
+        </div>
+        <div class="carousel-item container-fluid">
+          <h2 class="testimonial-text">Vrlo zanimljive riječi kojih se treba domisliti i naći ih 👍</h2>
+          <img class="testimonial-image" src="images/komentari3.PNG" alt="lady-profile">
+          <em>Eva Orlović; 18 October 2018.</em>
         </div>
       </div>
       <a class="carousel-control-prev" href="#testimonial-carousel" role="button" data-slide="prev">
