--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ Have fun!!</p>
         </div>
         <div class="carousel-item container-fluid">
           <h2 class="testimonial-text">Vrlo zanimljive riječi kojih se treba domisliti i naći ih 👍</h2>
-          <img class="testimonial-image" src="images/komentari3.PNG" alt="lady-profile">
+          <img class="testimonial-image" src="images/komentari3.png" alt="lady-profile">
           <em>Eva Orlović; 18 October 2018.</em>
         </div>
       </div>
