dodana ikona web stranice

--- a/index.html
+++ b/index.html
@@ -94,16 +94,22 @@
     <div class="container-fluid">
 
       <div class="row">
-        <div class="feature-box col-lg-6">
+        <div class="feature-box col-lg-4">
           <i class="icon fas fa-check-circle fa-4x"></i>
           <h3 class="feature-title">Lako</h3>
           <p class="boja">Laka instalacija i podešavanje
         </div>
 
-        <div class="feature-box col-lg-6">
+        <div class="feature-box col-lg-4">
           <i class="icon fas fa-heart fa-4x"></i>
           <h3 class="feature-title">Garantirana zabava</h3>
           <p class="boja">Zabava za cijelu obitelj!</p>
+        </div>
+
+        <div class="feature-box col-lg-4">
+          <i class="icon fas fa-window-maximize fa-4x"></i>
+          <h3 class="feature-title">Web stranica</h3>
+          <p class="boja">Vlastita moderna i responzivna web stranica
         </div>
       </div>
 
