"zatraži" obojani u bijelo

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ Have fun!!</p>
             <h2 class="price-text">68 €/mj</h2>
             <p>Kreiranje i vođenje profila vaše tvrtke na društvenim mrežama</p>
             <p>Povezivanje profila na društvenim mrežama s web stranicom</p>
-            <a href="mailto:lagonatis@gmail.com"><button class="btn btn-lg btn-block btn-dark" type="button">Zatraži</button></a>
+            <a href="mailto:lagonatis@gmail.com"><button class="btn btn-lg btn-block btn-outline-dark" type="button">Zatraži</button></a>
           </div>
         </div>
       </div>
@@ -276,7 +276,7 @@ Have fun!!</p>
             <p>Izmjene cijena</p>
             <p>Umetanje PDF kataloga i tablica</p>
             <p>Izrada novih sadržaja</p>
-            <a href="mailto:lagonatis@gmail.com"><button class="btn btn-lg btn-block btn-dark" type="button">Zatraži</button></a>
+            <a href="mailto:lagonatis@gmail.com"><button class="btn btn-lg btn-block btn-outline-dark" type="button">Zatraži</button></a>
 
           </div>
         </div>
