--- a/index.html
+++ b/index.html
@@ -195,7 +195,12 @@ Have fun!!</p>
       </div>
     </div>
 
-    <div id="testimonial-carousel" class="carousel slide" data-ride="false">
+    <div id="testimonial-carousel" class="carousel slide" data-ride="carousel" data-interval="2500" data-pause="hover">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
       <div class="carousel-inner">
         <div class="carousel-item active container-fluid">
           <h2 class="testimonial-text">Very nice</h2>
