--- a/index.html
+++ b/index.html
@@ -238,24 +238,7 @@ Have fun!!</p>
 
     <div class="row">
 
-      <div class="pricing-column col-lg-4 col-md-6">
-        <div class="card">
-          <div class="card-header">
-            <h3>Jednostavne web stranice</h3>
-            <p>Idealno rješenje za manje tvrtke, obrte koji nemaju potrebe za samostalnim ažuriranjem sadržaja web stranice</p>
-          </div>
-          <div class="card-body">
-            <h2 class="price-text">od 270 €</h2>
-            <p>Unos i obrada svih materijala</p>
-            <p>Grafička obrada slika</p>
-            <p>Responzivan web dizajn (web koji se prilagodi veličini ekrana)</p>
-            <p>Moderan web dizajn</p>
-            <a href="mailto:lagonatis@gmail.com"><button class="btn btn-lg btn-block btn-outline-dark" type="button">Zatraži</button></a>
-          </div>
-        </div>
-      </div>
-
-      <div class="pricing-column col-lg-4 col-md-6">
+      <div class="pricing-column col-md-6 col-lg-4">
         <div class="card">
           <div class="card-header">
             <h3>Marketing na društvenim mrežama</h3>
@@ -269,7 +252,7 @@ Have fun!!</p>
         </div>
       </div>
 
-      <div class="pricing-column col-lg-4">
+      <div class="pricing-column col-lg-4 col-md-6">
         <div class="card">
           <div class="card-header">
             <h3>Cijena održavanja web stranica</h3>
@@ -287,7 +270,22 @@ Have fun!!</p>
         </div>
       </div>
 
-
+      <div class="pricing-column col-12 col-lg-4">
+        <div class="card">
+          <div class="card-header">
+            <h3>Jednostavne web stranice</h3>
+            <p>Idealno rješenje za manje tvrtke, obrte koji nemaju potrebe za samostalnim ažuriranjem sadržaja web stranice</p>
+          </div>
+          <div class="card-body">
+            <h2 class="price-text">od 270 €</h2>
+            <p>Unos i obrada svih materijala</p>
+            <p>Grafička obrada slika</p>
+            <p>Responzivan web dizajn (web koji se prilagodi veličini ekrana)</p>
+            <p>Moderan web dizajn</p>
+            <a href="mailto:lagonatis@gmail.com"><button class="btn btn-lg btn-block btn-outline-dark" type="button">Zatraži</button></a>
+          </div>
+        </div>
+      </div>
 
     </div>
 
