--- a/index.html
+++ b/index.html
@@ -308,9 +308,9 @@ Have fun!!</p>
 
   <footer class="mint-section" id="footer">
     <div class="container-fluid">
-        <span><a href="https://www.facebook.com/lagonatisapp/"><i class="social-icon fab fa-facebook-f" title="Facebook"></i></a></span>
-        <span><a href="mailto:lagonatis@gmail.com"><i class="social-icon fas fa-envelope" title="E-mail"></i></a></span>
-        <span><a href="https://glacial-peak-43506.herokuapp.com"><i class="social-icon far fa-newspaper" title="Newsletter"></i></a></span>
+        <span data-toggle="tooltip" data-placement="bottom" title="Facebook"><a href="https://www.facebook.com/lagonatisapp/"><i class="social-icon fab fa-facebook-f"></i></a></span>
+        <span data-toggle="tooltip" data-placement="bottom" title="E-mail"><a href="mailto:lagonatis@gmail.com"><i class="social-icon fas fa-envelope"></i></a></span>
+        <span data-toggle="tooltip" data-placement="bottom" title="Newsletter"><a href="https://glacial-peak-43506.herokuapp.com"><i class="social-icon far fa-newspaper"></i></a></span>
       <p class="copy">© Copyright 2019 Lagonatis</p>
 
         <a href='https://www.free-counters.org/'></a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=8fa08bff7fba251bb68b4b2efca4786f945ae24b'></script>
