--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
 
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
+              <a class="nav-link boja_linka" href="#reference">Reference</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link boja_linka" href="#footer">Kontakt</a>
             </li>
             <li class="nav-item">
@@ -288,6 +291,18 @@ Have fun!!</p>
       </div>
 
     </div>
+
+  <div class="pricing-column" id="reference">
+        <div class="card">
+          <div class="card-header">
+            <h2>Dosadašnji projekti</h2>
+          </div>
+          <div class="card-body">
+            <h4><a href="https://glacial-peak-43506.herokuapp.com" class="boja_linka">Sign Up forma za newsletter</a></h4>
+            <h4><a href="https://secret-crag-28784.herokuapp.com" class="boja_linka">ToDo List</a></h4>            
+          </div>
+        </div>
+  </div>
 
   </section>
 
