--- a/index.html
+++ b/index.html
@@ -299,7 +299,8 @@ Have fun!!</p>
           </div>
           <div class="card-body">
             <h4><a href="https://glacial-peak-43506.herokuapp.com" class="boja_linka" target="_blank">Sign Up forma za newsletter</a></h4>
-            <h4><a href="https://secret-crag-28784.herokuapp.com" class="boja_linka" target="_blank">ToDo List</a></h4>            
+            <h4><a href="https://secret-crag-28784.herokuapp.com" class="boja_linka" target="_blank">ToDo List</a></h4>
+            <h4><a href="https://hidden-plateau-63597.herokuapp.com" class="boja_linka" target="_blank">CRO-BLOG</a></h4>             
           </div>
         </div>
   </div>
