--- a/index.html
+++ b/index.html
@@ -235,7 +235,9 @@
                   <h4><a href="https://secret-crag-28784.herokuapp.com" class="boja_linka" target="_blank">ToDo List</a></h4>
                   <h4><a href="https://hidden-plateau-63597.herokuapp.com" class="boja_linka" target="_blank">CRO-BLOG</a></h4>
                   <h4><a href="https://damp-reef-55288.herokuapp.com" class="boja_linka" target="_blank">HNB Exchange Rate</a></h4>
-                  <h4><a href="https://gentle-refuge-97080.herokuapp.com" class="boja_linka" target="_blank">Web stranica</a></h4>
+                  <h4><a href="https://gentle-refuge-97080.herokuapp.com" class="boja_linka" target="_blank">Web stranica za građevinsku firmu</a></h4>
+                  <h4><a href="https://travel--assistant.herokuapp.com" class="boja_linka" target="_blank">Travel Assistant</a></h4>
+                  <h4><a href="https://test--platform.herokuapp.com" class="boja_linka" target="_blank">Test platforma</a></h4>
                </div>
             </div>
          </div>
@@ -248,9 +250,11 @@
       </section>
       <footer class="mint-section" id="footer">
          <div class="container-fluid">
-            <span data-toggle="tooltip" data-placement="bottom" title="Facebook"><a href="https://www.facebook.com/lagonatisapp/" target="_blank"><i class="social-icon fab fa-facebook-f"></i></a></span>
+            <span data-toggle="tooltip" data-placement="bottom" title="Youtube Lagonatis"><a href="https://www.youtube.com/channel/UCHrP5tERyeVVx0J7WlOpyPg/videos" target="_blank"><i class="social-icon fab fa-youtube"></i></a></span>
+            <span data-toggle="tooltip" data-placement="bottom" title="Facebook"><a href="https://www.facebook.com/lagonatisgaming/" target="_blank"><i class="social-icon fab fa-facebook-f"></i></a></span>
             <span data-toggle="tooltip" data-placement="bottom" title="E-mail"><a href="mailto:lagonatis@gmail.com"><i class="social-icon fas fa-envelope"></i></a></span>
             <span data-toggle="tooltip" data-placement="bottom" title="Newsletter"><a href="https://glacial-peak-43506.herokuapp.com" target="_blank"><i class="social-icon far fa-newspaper"></i></a></span>
+            <span data-toggle="tooltip" data-placement="bottom" title="Youtube Kia Kras"><a href="https://www.youtube.com/channel/UCyy5vfDTqRQydBnycsJliaQ/videos" target="_blank"><i class="social-icon fab fa-youtube"></i></a></span>
             <p class="text-muted copy">
                &copy; Copyright 2019<script>new Date().getFullYear()>2010&&document.write("-"+new Date().getFullYear());</script>, <strong><a href="https://github.com/suncica-negra" target="_blank">Lagonatis</a></strong>
             </p>
