--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="hr-HR">
    <head>
-      <meta charset="utf-8">
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      <meta name="description" content="Zabavljajte se uz zabavne igre na svom mobitelu. Naručite izradu vlastite web stranice ili njezino održavanje.">
+      <meta name="keywords" content="Igrice, izrada web stranica, igra">
+      <meta name="author" content="O.K.">
       <title>Lagonatis</title>
       <!-- Google Fonts -->
       <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu" rel="stylesheet">
@@ -14,7 +18,7 @@
       <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-      <script type="text/javascript" src="javaScript.js"></script>
+      <script src="javaScript.js"></script>
       <link rel="icon" href="favicon.ico">
    </head>
    <body>
@@ -87,7 +91,7 @@
          <div class="skills">
             <h2 class="margin">Igre za android mobitele</h2>
             <div class="skill-row">
-               <img class="code-img" src="images/nadi_rijeci.png" alt="code-img">
+               <img class="code-img" src="images/nadi_rijeci.png" alt="nadi_rijeci">
                <h3><a href="https://play.google.com/store/apps/details?id=com.lagonatisx.nadirijeci" class="boja_linka" target="_blank">Nađi riječi</a></h3>
                <p>Pronađi hrvatske riječi u ovoj četverosmjerki!
                   Nadi rijeci koje se mogu kretati u 4 smjera.
@@ -99,7 +103,7 @@
                </p>
             </div>
             <div class="skill-row">
-               <img class="chilli-img" src="images/finde_worte.png" alt="chillies-img">
+               <img class="chilli-img" src="images/finde_worte.png" alt="finde_worte">
                <h3><a href="https://play.google.com/store/apps/details?id=com.lagonatis.findeworter" class="boja_linka" target="_blank">Finde Wörter</a></h3>
                <p>Fun Wortsuche Spiel, wo Sie Worte finden müssen, die in 4 Richtungen gehen können.
                   Geh und entdecke sie!
@@ -109,7 +113,7 @@
                </p>
             </div>
             <div class="skill-row">
-               <img class="code-img" src="images/palabras.png" alt="code-img">
+               <img class="code-img" src="images/palabras.png" alt="palabras">
                <h3><a href="https://play.google.com/store/apps/details?id=com.lagonatis.encontrarpalabras" class="boja_linka" target="_blank">Finde Wörter - Formar Palabras - Buscar Palabras</a></h3>
                <p>Sopa de Letras y Sopa de palabras - nada mejor! Econtrar Palabras!
                   Divertido y entretenido juego de palabra con una simple conexión de letras y formación de palabras.
@@ -121,7 +125,7 @@
                </p>
             </div>
             <div class="skill-row">
-               <img class="chilli-img" src="images/wordihno.png" alt="chillies-img">
+               <img class="chilli-img" src="images/wordihno.png" alt="wordihno">
                <h3><a href="https://play.google.com/store/apps/details?id=com.lagonatis.wordinho" class="boja_linka" target="_blank">Find Word - Wordinho</a></h3>
                <p>Fun word search game where you must find words that can go in 4 directions.
                   Go and discover them in this fun game Wordinho.
@@ -134,12 +138,12 @@
                </p>
             </div>
             <div class="skill-row">
-               <img class="code-img" src="images/cartoon.png" alt="code-img">
+               <img class="code-img" src="images/cartoon.png" alt="cartoon">
                <h3><a href="https://play.google.com/store/apps/details?id=com.lagonatisx.cartooncharactersnames" class="boja_linka" target="_blank">Cartoon Characters Names</a></h3>
                <p>Guess cartoon characters names by revealing square by square. Earn coins with guess or spend some to help with hard ones. Have fun!</p>
             </div>
             <div class="skill-row">
-               <img class="chilli-img margin" src="images/movie.png" alt="chillies-img">
+               <img class="chilli-img margin" src="images/movie.png" alt="movie">
                <h3 class="margin"><a href="https://play.google.com/store/apps/details?id=com.lagonatisx.movieguessinghiddenpicture" class="boja_linka" target="_blank">Movie Guessing, Hidden Picture</a></h3>
                <p>Movie game! Guess the movie from hidden picture that you partially reveal square by square. But be careful and try to reveal as little as possible squares to get more coins. Name of the movies do not include sequels like "name of the movie sequel number" or "name of the movie: sequel name".</p>
             </div>
@@ -153,17 +157,17 @@
             <div class="carousel-inner">
                <div class="carousel-item active container-fluid">
                   <h2 class="testimonial-text">Very nice</h2>
-                  <img class="testimonial-image" src="images/komentari1.PNG" alt="dog-profile">
+                  <img class="testimonial-image" src="images/komentari1.PNG" alt="komentari1">
                   <em>Snjezana OSTI; April 17, 2018.</em>
                </div>
                <div class="carousel-item container-fluid">
                   <h2 class="testimonial-text">Zanimljivo i poučno</h2>
-                  <img class="testimonial-image" src="images/komentari2.PNG" alt="lady-profile">
+                  <img class="testimonial-image" src="images/komentari2.PNG" alt="komentari2">
                   <em>Sunčica L; August 3, 2017.</em>
                </div>
                <div class="carousel-item container-fluid">
                   <h2 class="testimonial-text">Vrlo zanimljive riječi kojih se treba domisliti i naći ih 👍</h2>
-                  <img class="testimonial-image" src="images/komentari3.png" alt="lady-profile">
+                  <img class="testimonial-image" src="images/komentari3.png" alt="komentari3">
                   <em>Eva Orlović; 18 October 2018.</em>
                </div>
             </div>
@@ -258,8 +262,8 @@
             <p class="text-muted copy">
                &copy; Copyright 2019<script>new Date().getFullYear()>2010&&document.write("-"+new Date().getFullYear());</script>, <strong><a href="https://github.com/suncica-negra" target="_blank">Lagonatis</a></strong>
             </p>
-            <a href='https://www.free-counters.org/'></a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=8fa08bff7fba251bb68b4b2efca4786f945ae24b'></script>
-            <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/544476/t/0"></script>
+            <a href='https://www.free-counters.org/'></a> <script src='https://www.freevisitorcounters.com/auth.php?id=8fa08bff7fba251bb68b4b2efca4786f945ae24b'></script>
+            <script src="https://www.freevisitorcounters.com/en/home/counter/544476/t/0"></script>
          </div>
       </footer>
    </body>
